# django-todo-app

./: .gitignore  Dockerfile  Pipfile  README.md  manage.py  pyproject.toml  requirements.txt
core/: models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_auto_20191206_1252.py  0003_auto_20191206_1503.py  0004_auto_20191212_1527.py  0005_auto_20191212_1529.py
core/tests/: test_models.py  test_tag_model.py  test_todo_model.py
todo_app/: settings.py  urls.py
