[tool.poetry]
name = "django-todo-app"
version = "1.0.0"
description = "Simple RESTful API for todo app"
authors = ["Nikita Borisowsky <nikitowsky@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
asgiref = "3.2.3"
django = "3.0.3"
djangorestframework = "3.11.0"
gunicorn = "20.0.4"
pytz = "2019.3"
sqlparse = "0.3.0"

[tool.poetry.dev-dependencies]
yapf = "^0.29.0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
